# fullmacro

./: CMakeLists.txt  LICENSE  README.md  main.c  test.c
fullmacro/: common_bool.h  fullmacro.c  fullmacro.h  infer.h  shut_up.h  version.h
